# EvidenceSpine

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
benchmarks/: apples_to_apples_compare.py  bench_evidencespine.py
docs/: ADAPTERS.md  APPLE_TO_APPLE_COMPARISON.md  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE_CODE.md  COMPETITOR_POSITIONING.md  INTEGRATION.md  PROTOCOL.md  PUBLISH.md
docs/benchmarks/: README.md  apples_to_apples_2026-02-28.json  apples_to_apples_2026-02-28.md
examples/: basic_usage.py  claude_code_usage.py  langgraph_replay_demo.py  multi_agent_handoff.py  reconcile_hook_demo.py  transcript_replay_harness.py
examples/replay_fixtures/: contradiction_trace.json  implementer_auditor_trace.json  tool_heavy_trace.json
src/evidencespine/: __init__.py  cli.py  protocol.py  retriever.py  runtime.py  settings.py  store.py  vector_backends.py
src/evidencespine/adapters/: __init__.py  autogen.py  base.py  langgraph.py  transcript.py
tests/: test_adapter_replay_fixtures.py  test_benchmarks.py  test_cli.py  test_hybrid_and_adapters.py  test_protocol.py  test_runtime_flow.py  test_transcript_adapter.py
