[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidencespine"
version = "0.1.0"
description = "Agent-agnostic evidence-bound conversation memory fabric"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors = [
  { name = "EvidenceSpine Contributors" }
]
keywords = ["agents", "memory", "llm", "handoff", "governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rivastava/SovereignAlpha_v4/tree/main/oss/evidencespine"
Documentation = "https://github.com/rivastava/SovereignAlpha_v4/tree/main/oss/evidencespine/docs"
Issues = "https://github.com/rivastava/SovereignAlpha_v4/issues"

[project.scripts]
evidencespine = "evidencespine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
